--- a/asae_web/package.json
+++ b/asae_web/package.json
@@ -14,5 +14,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": {
+    "/modelCount": {
+      "target": "http://localhost:8080"
+    },
+    "/AddView": {
+      "target": "http://localhost:8080"
+    }
+  }
 }
