--- a/backendAPI/package.json
+++ b/backendAPI/package.json
@@ -9,6 +9,7 @@
   "author": "Benjamin Fields",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "nodemon": "^1.17.4"
   }
